# abcd-substance-matching

./: .gitignore  README.md  environment.yml  pyproject.toml
R/: matching.R
abcd_substance_matching/: __init__.py  data.py  utils.py
conf/: dynamic_variables.yaml  filepaths.yaml  mappings.yaml  static_variables.yaml
scripts/: load_data.py  make_matches.R
